--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 		"@formkit/auto-animate": "1.0.0-beta.6",
 		"@tanstack/react-router": "0.0.1-beta.83",
 		"@tanstack/router": "0.0.1-beta.83",
+		"dayjs": "^1.11.7",
 		"emoji-picker-react": "^4.4.8",
 		"houseform": "^1.10.0",
 		"react": "^18.2.0",
