--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
 	"dependencies": {
 		"@clerk/clerk-react": "^4.14.0",
 		"@clerk/themes": "^1.5.1",
-		"@formkit/auto-animate": "1.0.0-beta.6",
+		"@emoji-mart/data": "^1.1.2",
+		"@emoji-mart/react": "^1.1.1",
 		"@tanstack/react-router": "0.0.1-beta.83",
 		"@tanstack/router": "0.0.1-beta.83",
 		"dayjs": "^1.11.7",
-		"emoji-picker-react": "^4.4.8",
+		"emoji-mart": "^5.5.2",
 		"houseform": "^1.10.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
