--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clerk/fastify": "latest",
+    "@fastify/cors": "^8.2.1",
     "dotenv": "^16.0.3",
     "fastify": "4.12.0"
   },
