--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,13 @@
   "dependencies": {
     "@clerk/fastify": "latest",
     "@fastify/cors": "^8.2.1",
+    "@planetscale/database": "^1.6.0",
+    "@types/pg": "^8.6.6",
     "dotenv": "^16.0.3",
-    "fastify": "4.12.0"
+    "drizzle-orm": "^0.23.5",
+    "fastify": "4.12.0",
+    "pg": "^8.10.0",
+    "planetscale": "^2.1.0"
   },
   "repository": {
     "type": "git",
@@ -29,6 +34,7 @@
   "homepage": "https://github.com/clerkinc/clerk-fastify-starter#readme",
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "drizzle-kit": "^0.17.1-609a4f0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1"
