--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "drizzle-kit": "^0.16.9",
+    "drizzle-kit": "^0.17.1-609a4f0",
     "eslint": "^8.37.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
