--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "drizzle-orm": "0.23.5-65b5b5a",
     "fastify": "4.12.0",
     "mysql2": "^3.2.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "uuidv4": "^6.2.13"
   },
   "repository": {
     "type": "git",
