--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,14 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
+		"react-use-websocket": "^4.3.1",
+		"ws": "^8.13.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/ws": "^8.5.5",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@vitejs/plugin-react-swc": "^3.3.2",
 		"autoprefixer": "^10.4.14",
