--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@clerk/fastify": "latest",
+    "@fastify/cookie": "^8.3.0",
     "@fastify/cors": "^8.2.1",
     "@fastify/websocket": "^7.2.0",
     "@planetscale/database": "^1.6.0",
     "dotenv": "^16.0.3",
     "drizzle-orm": "0.23.5-65b5b5a",
     "fastify": "4.12.0",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.2.0",
     "socket.io": "^4.6.1",
     "typescript": "^5.0.3",
@@ -35,6 +37,7 @@
   },
   "homepage": "https://github.com/clerkinc/clerk-fastify-starter#readme",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "drizzle-kit": "^0.17.1-609a4f0",
