--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dev": "npx nodemon src/server.ts"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.12.1",
     "@clerk/fastify": "latest",
     "@fastify/cookie": "^8.3.0",
     "@fastify/cors": "^8.2.1",
