--- a/server/package.json
+++ b/server/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "clerk-fastify-starter",
-  "description": "Official starter repo for Clerk and Fastify",
-  "private": true,
-  "keywords": [
-    "clerk",
-    "nextjs",
-    "fastify",
-    "authentication"
-  ],
-  "scripts": {
-    "start": "npx ts-node src/server.ts",
-    "dev": "npx nodemon src/server.ts"
-  },
-  "dependencies": {
-    "@clerk/clerk-sdk-node": "^4.12.1",
-    "@clerk/fastify": "latest",
-    "@fastify/cookie": "^8.3.0",
-    "@fastify/cors": "^8.2.1",
-    "@fastify/websocket": "^7.2.0",
-    "@planetscale/database": "^1.6.0",
-    "dotenv": "^16.0.3",
-    "drizzle-orm": "0.23.5-65b5b5a",
-    "fastify": "4.12.0",
-    "jsonwebtoken": "^9.0.1",
-    "mysql2": "^3.2.0",
-    "socket.io": "^4.6.1",
-    "typescript": "^5.0.3",
-    "uuidv4": "^6.2.13"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clerkinc/clerk-fastify-starter.git"
-  },
-  "author": "Clerk Inc",
-  "bugs": {
-    "url": "https://github.com/clerkinc/clerk-fastify-starter/issues"
-  },
-  "homepage": "https://github.com/clerkinc/clerk-fastify-starter#readme",
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "drizzle-kit": "^0.17.1-609a4f0",
-    "eslint": "^8.37.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^2.8.7",
-    "ts-node": "^10.9.1"
-  }
+    "name": "clerk-fastify-starter",
+    "description": "Official starter repo for Clerk and Fastify",
+    "private": true,
+    "keywords": [
+        "clerk",
+        "nextjs",
+        "fastify",
+        "authentication"
+    ],
+    "scripts": {
+        "start": "npx ts-node src/server.ts",
+        "dev": "npx nodemon src/server.ts",
+        "db:push": "drizzle-kit push:mysql"
+    },
+    "dependencies": {
+        "@clerk/clerk-sdk-node": "^4.12.1",
+        "@clerk/fastify": "latest",
+        "@fastify/cookie": "^8.3.0",
+        "@fastify/cors": "^8.2.1",
+        "@fastify/websocket": "^7.2.0",
+        "@planetscale/database": "^1.6.0",
+        "dotenv": "^16.0.3",
+        "drizzle-orm": "^0.28.1",
+        "fastify": "4.12.0",
+        "jsonwebtoken": "^9.0.1",
+        "mysql2": "^3.2.0",
+        "socket.io": "^4.6.1",
+        "typescript": "^5.0.3",
+        "uuidv4": "^6.2.13"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/clerkinc/clerk-fastify-starter.git"
+    },
+    "author": "Clerk Inc",
+    "bugs": {
+        "url": "https://github.com/clerkinc/clerk-fastify-starter/issues"
+    },
+    "homepage": "https://github.com/clerkinc/clerk-fastify-starter#readme",
+    "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "drizzle-kit": "^0.19.12",
+        "eslint": "^8.37.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^2.8.7",
+        "ts-node": "^10.9.1"
+    }
 }
