--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"@clerk/themes": "^1.7.5",
 		"@emoji-mart/data": "^1.1.2",
 		"@emoji-mart/react": "^1.1.1",
+		"@fontsource/open-sans": "^5.0.8",
 		"@tanstack/react-query": "^4.29.25",
 		"@tanstack/react-router": "0.0.1-beta.83",
 		"@tanstack/router": "0.0.1-beta.83",
